--- a/main.css
+++ b/main.css
@@ -1,9 +1,11 @@
-/**
-body {
+
+/**body {
 	background: linear-gradient(-30deg, #86b9b0, #4c7273, #042630, #041421);
 	background-size: 400% 400%;
 	animation: gradient 20s ease infinite;
 	height: 100vh;
+	margin: 0; 
+	padding: 0;
 }
 
 @keyframes gradient {
@@ -18,27 +20,28 @@ body {
 	}
 }**/
 
+
 body {
 	background: #4C7273;
-	margin: 0; 
-	padding: 0;
 	height: 100vh;
 }
 
 .header {
-	background-color: #042630;
 	overflow: hidden;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	height: 60px;
+	height: 100px;
+	background: #042630;
+	border-radius: 10px;
+	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .header a {
 	float: right;
 	color: white;
 	text-align: center;
-	padding: 14px 16px;
+	padding: 20px 20px;
 	text-decoration: none;
 }
 
@@ -50,3 +53,56 @@ body {
 	width: auto;
 }
 
+.rectangle {
+	width: 70vw;
+	height: 300px;
+	flex-shrink: 0; /**idk if this is needed ngl fix later**/
+	margin: 0 auto;
+	border-radius: 50px;
+	background: #041421;
+	box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.25);
+	margin-top: 25px;
+	position: relative;
+}
+
+.modes {
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+	position: absolute;
+	margin-top: 50px;
+	margin-left: 5vh;
+	margin: 0 auto;
+	top: 30%;
+ 	left: 50%;
+  	transform: translate(-50%, -50%);
+}
+
+.modes button {
+	width: 120px;
+	height: 50px;
+    background-color: #4C7273;
+    color: #c5cbcb;
+    border: 2px solid white; 
+    padding: 10px 20px;
+    margin: 0 10px;
+    font-size: 16px;
+    cursor: pointer;
+	border-radius: 10px;
+	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+	display: flex;
+	justify-content: centre;
+	align-items: center;
+	
+}
+
+.modes button:hover {
+	background: transparent;
+}
+
+#girl {
+	float: right;
+	height: 300px;
+	width: auto;
+	margin-top: 100px;
+}
